buggery/tests/errors/uninitialized_variable.bgr

default:
  task(VAR)

task(X):
  $ ls $X
  
